syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "proto/common.proto";

// messages the server sends to the client
message ServerMessage {
  message ServerResponse { bool is_ok = 1; }

  message ThreadMessagePack {
    message ThreadSendMessageRequest {
      uint64 id = 1;
      uint64 thread_id = 2;
      string body = 3;
      google.protobuf.Timestamp time = 4;
    }
    repeated ThreadSendMessageRequest messages = 1;
  }

  message ThreadPack {
    message ThreadData {
      uint64 id = 1;
      string head = 2;
      string body = 3;
    }
    repeated ThreadData threads = 1;
  }

  oneof inner {
    UserCredentials new_account_data = 1;

    // a universal response that can be sent on any request
    ServerResponse server_response = 2;
    ThreadMessagePack new_messages_appeared = 3;

    // server sends only new (those the client hasn't seen that is) threads to the client
    ThreadPack all_the_threads = 4;
  }
}